--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -29,7 +29,7 @@
   </div>
 
   <div th:if="${param.logout}" class="alert alert-info mt-3 text-center p-2" role="alert">
-    You have been logged out.
+    You have been logged out
   </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
