--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -14,76 +14,108 @@ html, body {
     height: 100vh;
 }
 
-.chat-list {
-    overflow-y: auto;
-    height: 100%;
-    background-color: #fff;
-}
-
-.chat-list h5 {
-    padding: 20px;
+.chat-list-header {
+    height: 80px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 20px;
     border-bottom: 1px solid #dee2e6;
 }
 
-.chat-list a {
-    text-decoration: none;
-    color: #212529;
-    display: block;
-    padding: 10px 15px;
-    border-radius: 5px;
+.chat-list {
+    background-color: #fff;
 }
 
-.chat-list a:hover {
-    background-color: #f1f1f1;
+.chat-list-item {
+    height: 100px;
+    border-bottom: 1px solid #dee2e6;
+}
+
+.chats {
+    overflow-y: auto;
+    height: calc(100vh - 80px);
+}
+
+.chat-list a {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #212529;
+    padding-left: 20px;
+}
+
+.chat-list .active {
+    background-color: #ceecff;
+}
+
+.chat-header {
+    height: 60px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 20px;
 }
 
 .message-box {
     flex-grow: 1;
     overflow-y: auto;
+    max-height: calc(100vh - 110px);
     border: 1px solid #dee2e6;
     padding: 10px;
     background-color: #f8f9fa;
     border-radius: 5px;
 }
 
-.message {
-    max-width: 75%;
-    padding: 5px 10px 10px;
-    border-radius: 15px;
-    margin-bottom: 15px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.05);
-    position: relative;
-    clear: both;
+.message-wrapper {
+    display: block;
+    text-align: left;
 }
 
-.message.from-user {
-    background-color: #d1e7dd;
-    margin-left: auto;
+.from-user {
     text-align: right;
 }
 
-.message.from-other {
-    background-color: #ffffff;
-    margin-right: auto;
+.message {
+    display: inline-block;
+    max-width: 75%;
+    padding: 5px 10px;
+    border-radius: 15px;
+    margin-bottom: 15px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.05);
     text-align: left;
+}
+
+.from-user .message {
+    background-color: #d1e7dd;
+}
+
+.from-other .message {
+    background-color: #ffffff;
 }
 
 .message .username {
     font-weight: bold;
     font-size: 0.8rem;
     color: #0d6efd;
-    margin-bottom: 0px;
     display: block;
     text-align: left;
 }
 
-.message.from-user .username {
+.from-user .message .username {
     text-align: right;
 }
 
 .message small {
     font-size: 0.75rem;
     display: block;
+    text-align: left;
+}
+
+.from-user .message small {
+    text-align: right;
 }
 
 .message strong {
@@ -91,11 +123,36 @@ html, body {
 }
 
 .message-form {
-    margin-top: auto;
-    padding-top: 10px;
+    height: 50px;
     border-top: 1px solid #dee2e6;
 }
 
 .inactive-chat-message {
     margin-top: 20vh;
+}
+
+.date-divider {
+    text-align: center;
+    margin: 20px 0;
+    position: relative;
+    color: #6c757d;
+    font-size: 1rem;
+}
+
+.date-divider::before,
+.date-divider::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    width: 40%;
+    height: 1px;
+    background: #ced4da;
+}
+
+.date-divider::before {
+    left: 0;
+}
+
+.date-divider::after {
+    right: 0;
 }
