--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -15,7 +15,7 @@ html, body {
 }
 
 .chat-list-header {
-    height: 80px;
+    min-height: 80px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -25,6 +25,8 @@ html, body {
 
 .chat-list {
     background-color: #fff;
+    border-right: 1px solid #dee2e6;
+    max-height: 100vh;
 }
 
 .chat-list-item {
@@ -34,7 +36,6 @@ html, body {
 
 .chats {
     overflow-y: auto;
-    height: calc(100vh - 80px);
 }
 
 .chat-list a {
@@ -51,8 +52,12 @@ html, body {
     background-color: #ceecff;
 }
 
+.chat-body {
+    max-height: 100vh;
+}
+
 .chat-header {
-    height: 60px;
+    min-height: 60px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -62,7 +67,6 @@ html, body {
 .message-box {
     flex-grow: 1;
     overflow-y: auto;
-    max-height: calc(100vh - 110px);
     border: 1px solid #dee2e6;
     padding: 10px;
     background-color: #f8f9fa;
@@ -123,8 +127,7 @@ html, body {
 }
 
 .message-form {
-    height: 50px;
-    border-top: 1px solid #dee2e6;
+    min-height: 50px;
 }
 
 .inactive-chat-message {
