--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -11,7 +11,7 @@
 <div class="container-fluid">
   <div class="row chat-container shadow-lg">
 
-    <div class="col-md-3 p-0 chat-list">
+    <div class="col-md-3 p-0 chat-list d-flex flex-column">
       <div class="chat-list-header">
         <h4>Your chats</h4>
       </div>
@@ -54,10 +54,11 @@
           </div>
         </div>
 
-        <form th:action="@{/messages/send}" method="post" class="d-flex message-form">
-          <input type="hidden" name="senderId" th:value="${currentUser.id}"/>
-          <input type="hidden" name="chatId" th:value="${activeChat.id}"/>
-          <input type="text" name="text" class="form-control me-2" placeholder="Enter the message..." required/>
+        <div id="send-message-error" class="text-danger" style="display: none;"></div>
+        <form class="d-flex message-form" id="send-message-form">
+          <input type="hidden" id="send-message-form-sender-id" th:value="${currentUser.id}"/>
+          <input type="hidden" id="send-message-form-chat-id" th:value="${activeChat.id}"/>
+          <input type="text" id="send-message-form-content" class="form-control me-2" placeholder="Enter the message..."/>
           <button type="submit" class="btn btn-primary">Send</button>
         </form>
       </div>
