--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -16,10 +16,16 @@
         <h4>Your chats</h4>
       </div>
 
-      <div class="chats">
-        <div th:each="chat : ${currentUser.chats}" class="chat-list-item">
+      <div class="chats" id="chat-list">
+        <div th:each="chat : ${currentUser.chats}" th:id="${chat.id}" class="chat-list-item">
           <a th:classappend="${activeChat != null and activeChat.id == chat.id} ? 'active'"
-             th:href="@{/(chat=${chat.id})}" th:text="${chat.name}"></a>
+             th:href="@{/(chat=${chat.id})}" class="chat-link flex-column justify-content-around">
+            <span th:text="${chat.name}" class="chat-name fw-bold"></span>
+            <small class="chat-preview text-muted"
+                   th:text="${chat.lastMessage != null ?
+                   ((chat.lastMessage.sender.username == currentUser.username ? 'You: ' : chat.lastMessage.sender.name + ': ') + chat.lastMessage.content)
+                   : 'No messages yet'}"></small>
+          </a>
         </div>
       </div>
     </div>
