--- a/src/main/resources/templates/errors/error.html
+++ b/src/main/resources/templates/errors/error.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Error</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/css/error.css">
+  <link rel="stylesheet" href="/css/errors/error.css">
 </head>
 <body>
 <div class="error-container">
