profile settings page

--- a/src/main/resources/static/css/pages/chat.css
+++ b/src/main/resources/static/css/pages/chat.css
@@ -86,7 +86,12 @@ html, body {
 }
 
 .message-form {
-    min-height: 50px;
+    height: 50px;
+}
+
+textarea {
+    resize: none;
+    align-content: center;
 }
 
 .inactive-chat-message {
