--- a/src/main/resources/templates/pages/chat.html
+++ b/src/main/resources/templates/pages/chat.html
@@ -12,7 +12,7 @@
   <div class="row chat-container shadow-lg">
 
     <div class="col-md-2 p-0"
-         th:insert="~{components/side-bar.html}"
+         th:insert="~{components/side-bar-chats.html}"
          th:with="currentUser=${currentUser}, activeChat=${activeChat}"></div>
 
     <div class="col-md-10 p-0 bg-white">
@@ -47,13 +47,13 @@
 
         <div id="send-message-error" class="text-danger" style="display: none;"></div>
         <form class="d-flex message-form" id="send-message-form">
-          <input type="text" id="send-message-form-content" class="form-control me-2" placeholder="Enter the message..." required/>
+          <textarea id="send-message-form-content" class="form-control me-2" placeholder="Enter the message..." required></textarea>
           <button type="submit" class="btn btn-primary">Send</button>
         </form>
       </div>
 
       <div th:unless="${activeChat != null}" class="text-center text-muted inactive-chat-message">
-        <h5>Choose a chat, to start communication</h5>
+        <h5>Choose a chat to start communication</h5>
       </div>
     </div>
 
