--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -34,7 +34,7 @@
 
         <div class="mb-3">
             <label for="description" class="form-label">Description</label>
-            <textarea class="form-control" id="description" rows="2"></textarea>
+            <textarea class="form-control" id="description" style="resize: none"></textarea>
         </div>
 
         <div class="mb-3">
@@ -47,9 +47,9 @@
             <input type="password" class="form-control" id="confirmPassword" required>
         </div>
 
-        <button type="submit" class="btn btn-primary w-100">Register</button>
-
         <div id="validation-errors" class="alert alert-danger mt-3" role="alert" style="display: none;"></div>
+
+        <button type="submit" class="btn btn-primary w-100">Register</button>
     </form>
 
     <div class="text-center mt-3 pt-2" style="border-top: 2px solid #dee2e6">
