--- a/src/main/resources/templates/pages/chat.html
+++ b/src/main/resources/templates/pages/chat.html
@@ -64,7 +64,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 <script th:inline="javascript">
-  const currentUsername = /*[[${currentUser?.username}]]*/ null;
+  const currentUserId = /*[[${currentUser?.id}]]*/ null;
   const activeChatId = /*[[${activeChat?.id}]]*/ null;
 </script>
 <script src="/js/pages/chat.js"></script>
