--- a/src/main/resources/templates/pages/settings/edit-profile.html
+++ b/src/main/resources/templates/pages/settings/edit-profile.html
@@ -21,36 +21,41 @@
                 <h4>Edit Profile</h4>
             </div>
 
-            <form id="register-user-form">
-                <div class="mb-3">
-                    <label for="phone" class="form-label">Phone</label>
-                    <input type="text" class="form-control" id="phone" required>
-                </div>
+            <div class="p-0 d-flex justify-content-center align-items-start bg-white">
+                <form id="edit-user-form" class="profile-card shadow-sm rounded-4 p-4 mt-4">
 
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="username" required>
-                </div>
+                    <div class="profile-section mt-0">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="name" th:value="${currentUser.name}" required/>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email">
-                </div>
+                    <div class="profile-section">
+                        <label for="description" class="form-label">Description</label>
+                        <textarea class="form-control" id="description" th:text="${currentUser.description}" style="resize: none"></textarea>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" required>
-                </div>
+                    <div class="profile-section">
+                        <label for="username" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="username" th:value="${currentUser.username}" required/>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="description" class="form-label">Description</label>
-                    <textarea class="form-control" id="description" rows="2"></textarea>
-                </div>
+                    <div class="profile-section">
+                        <label for="phone" class="form-label">Phone</label>
+                        <input type="text" id="phone" class="form-control" th:value="${currentUser.phone}" required/>
+                    </div>
 
-                <button type="submit" class="btn btn-primary w-100">Save</button>
+                    <div class="profile-section">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" th:value="${currentUser.email}">
+                    </div>
 
-                <div id="validation-errors" class="alert alert-danger mt-3" role="alert" style="display: none;"></div>
-            </form>
+                    <div id="validation-errors" class="alert alert-danger mt-3" role="alert" style="display: none;"></div>
+
+                    <div class="d-flex justify-content-center mt-2">
+                        <button type="submit" class="btn btn-primary w-50 mt-4">Save</button>
+                    </div>
+                </form>
+            </div>
         </div>
 
     </div>
@@ -58,7 +63,8 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script th:inline="javascript">
-    const currentUsername = /*[[${currentUser?.username}]]*/ null;
+    const currentUserId = /*[[${currentUser?.id}]]*/ null;
 </script>
+<script src="/js/pages/edit-profile.js"></script>
 </body>
 </html>
