--- a/src/main/resources/static/css/pages/chat.css
+++ b/src/main/resources/static/css/pages/chat.css
@@ -46,7 +46,6 @@ html, body {
     max-width: 75%;
     padding: 5px 10px;
     border-radius: 15px;
-    margin-bottom: 15px;
     box-shadow: 0 0 5px rgba(0,0,0,0.05);
     text-align: left;
 }
@@ -122,4 +121,14 @@ textarea {
 
 .date-divider::after {
     right: 0;
+}
+
+.menu-item {
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 0.9rem;
+}
+
+.menu-item:hover {
+    background-color: #e9ecef;
 }
