--- a/src/main/resources/templates/pages/settings/profile.html
+++ b/src/main/resources/templates/pages/settings/profile.html
@@ -19,7 +19,7 @@
           <div class="settings-body d-flex flex-column h-100">
 
               <div class="setting-header">
-                  <h4>My profile</h4>
+                  <h4>My Profile</h4>
               </div>
 
               <div class="p-0 d-flex justify-content-center align-items-start bg-white settings-content">
