--- a/src/main/resources/templates/pages/chat.html
+++ b/src/main/resources/templates/pages/chat.html
@@ -19,7 +19,7 @@
       <div th:if="${activeChat != null}" class="chat-body d-flex flex-column h-100">
 
         <div class="chat-header">
-          <h4 th:text="${activeChat.name}"></h4>
+          <h4 data-bs-toggle="modal" data-bs-target="#chatInfoModal" th:text="${activeChat.name}"></h4>
         </div>
 
         <div class="message-box" id="messages">
@@ -59,6 +59,28 @@
       </div>
     </div>
 
+  </div>
+</div>
+
+<div class="modal fade" id="chatInfoModal" tabindex="-1" aria-labelledby="chatInfoModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content shadow">
+      <div class="modal-header">
+        <h5 class="modal-title" id="chatInfoModalLabel" th:text="${activeChat.name}">Chat Name</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p><strong>Participants:</strong></p>
+        <ul class="list-group overflow-auto" style="max-height: 250px;">
+          <li class="list-group-item d-flex justify-content-between align-items-center"
+              th:each="user : ${activeChat.users}">
+            <span th:text="${user.name}"></span>
+            <span class="badge bg-primary rounded-pill"
+                  th:if="${user.id == activeChat.owner.id}">Owner</span>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 
