--- a/src/main/resources/templates/pages/chat.html
+++ b/src/main/resources/templates/pages/chat.html
@@ -5,6 +5,14 @@
   <title>Messenger</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/pages/chat.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
+  <script th:inline="javascript">
+    const currentUserId = /*[[${currentUser?.id}]]*/ null;
+    const activeChatId = /*[[${activeChat?.id}]]*/ null;
+  </script>
+  <script src="/js/pages/chat.js"></script>
 </head>
 <body>
 
@@ -62,7 +70,7 @@
   </div>
 </div>
 
-<div class="modal fade" id="chatInfoModal" tabindex="-1" aria-labelledby="chatInfoModalLabel" aria-hidden="true">
+<div th:if="${activeChat != null}" class="modal fade" id="chatInfoModal" tabindex="-1" aria-labelledby="chatInfoModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content shadow">
       <div class="modal-header">
@@ -80,17 +88,13 @@
           </li>
         </ul>
       </div>
+      <div class="modal-footer justify-content-center">
+        <button th:if="${currentUser.id == activeChat.owner.id}" id="delete-chat-button" class="btn btn-danger w-50">Delete Chat</button>
+        <button th:if="${currentUser.id != activeChat.owner.id}" id="leave-chat-button" class="btn btn-outline-danger w-50">Leave Chat</button>
+      </div>
     </div>
   </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
-<script th:inline="javascript">
-  const currentUserId = /*[[${currentUser?.id}]]*/ null;
-  const activeChatId = /*[[${activeChat?.id}]]*/ null;
-</script>
-<script src="/js/pages/chat.js"></script>
 </body>
 </html>
