--- a/src/main/resources/templates/components/side-bar-chats.html
+++ b/src/main/resources/templates/components/side-bar-chats.html
@@ -11,10 +11,12 @@
       <a th:classappend="${activeChat?.id == chat.id} ? 'active'"
          th:href="@{/(chat=${chat.id})}" class="chat-link flex-column justify-content-around">
         <span th:text="${chat.name}" class="chat-name fw-bold"></span>
-        <small class="chat-preview text-muted"
-               th:text="${chat.lastMessage != null ?
-                   ((chat.lastMessage.sender.username == currentUser.username ? 'You: ' : chat.lastMessage.sender.name + ': ') + chat.lastMessage.content)
-                   : 'No messages yet'}"></small>
+        <small class="chat-preview text-muted" th:text="${
+                 chat.lastMessage == null ? 'No messages yet' :
+                 ((chat.lastMessage.sender == null ? 'Unknown: ' :
+                 (chat.lastMessage.sender.username == currentUser.username ? 'You: ' :
+                 chat.lastMessage.sender.name + ': ')) + chat.lastMessage.content)}">
+        </small>
       </a>
     </div>
   </div>
