--- a/src/main/resources/templates/pages/settings/edit-profile.html
+++ b/src/main/resources/templates/pages/settings/edit-profile.html
@@ -18,7 +18,7 @@
 
         <div class="col-md-2 p-0"
              th:insert="~{components/side-bar-settings.html}"
-             th:with="currentUser=${currentUser}, settingType='edit-profile'"></div>
+             th:with="settingType='edit-profile'"></div>
 
         <div class="col-md-10 p-0 bg-white">
             <div class="settings-body d-flex flex-column h-100">
