--- a/src/main/resources/templates/pages/settings/account.html
+++ b/src/main/resources/templates/pages/settings/account.html
@@ -18,7 +18,7 @@
 
         <div class="col-md-2 p-0"
              th:insert="~{components/side-bar-settings.html}"
-             th:with="currentUser=${currentUser}, settingType='account'"></div>
+             th:with="settingType='account'"></div>
 
         <div class="col-md-10 p-0 bg-white">
             <div class="settings-body d-flex flex-column h-100">
