--- a/src/main/resources/templates/pages/settings/profile.html
+++ b/src/main/resources/templates/pages/settings/profile.html
@@ -14,7 +14,7 @@
 
     <div class="col-md-2 p-0"
          th:insert="~{components/side-bar-settings.html}"
-         th:with="currentUser=${currentUser}, settingType='profile'"></div>
+         th:with="settingType='profile'"></div>
 
       <div class="col-md-10 p-0 bg-white">
           <div class="settings-body d-flex flex-column h-100">
