--- a/src/main/resources/templates/components/side-bar-chats.html
+++ b/src/main/resources/templates/components/side-bar-chats.html
@@ -2,8 +2,9 @@
 <script src="/js/components/side-bar-chats.js"></script>
 
 <div class="side-bar d-flex flex-column">
-  <div class="side-bar-header">
-    <h4>Your chats</h4>
+  <div class="side-bar-header d-flex justify-content-between align-items-center">
+    <h4 class="mb-0">Your chats</h4>
+    <button class="me-3 btn btn-outline-primary btn-sm">Create new</button>
   </div>
 
   <div class="side-bar-content" id="chat-list">
